src/objects/Import_Instance__c.object
<CustomObject>
    <fields>
        <fullName>Email_Attach_Logs__c</fullName>
        <formula>TEXT(Import_Definition__r.Email_Attach_Logs__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Attach Logs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <formula>TEXT(Import_Definition__r.Frequency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Definition__c</fullName>
        <label>Import Definition</label>
        <referenceTo>Import_Definition__c</referenceTo>
        <relationshipLabel>Import Instances</relationshipLabel>
        <relationshipName>Import_Instances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Required_Import_Files__c</fullName>
        <formula>Import_Definition__r.Require_Import_Files__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Required Import Files</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_Time__c</fullName>
        <formula>Import_Definition__r.Schedule_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Status_Change_via_Request_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag controller during Request Import to allow a status change monitored by validation rule.  To ensure status change goes through Request Import instead of direct field change.</description>
        <inlineHelpText>Flag controller during Request Import to allow a status change monitored by validation rule.  To ensure status change goes through Request Import instead of direct field change.</inlineHelpText>
        <label>Status Change via Request Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Pending&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Complete With Errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(Import_Definition__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Import Instance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Import_Definition__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>II-{0000}</displayFormat>
        <label>Import Instance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Instances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Status_Change_via_Request_Import_Only</fullName>
        <active>true</active>
        <description>Validate status change to scheduled via request import only</description>
        <errorConditionFormula>AND( TEXT(Status__c) = &quot;Scheduled&quot;,  NOT(Status_Change_via_Request_Import__c) )</errorConditionFormula>
        <errorMessage>Status change to Scheduled is only allowed thru the Request Import action.  Select the Request Import button to schedule the import automation.</errorMessage>
    </validationRules>
</CustomObject>